--- a/src/styles/theme/components/_components.scss
+++ b/src/styles/theme/components/_components.scss
@@ -2,9 +2,11 @@
 # Components
 ---------------------------------------*/
 
+@import "business-portal-container";
 @import "content";
 @import "footer";
 @import "header";
 @import "rewards";
 @import "rewards_form";
 @import "dashboard";
+@import "stats";
