--- a/src/styles/theme/details/_error.scss
+++ b/src/styles/theme/details/_error.scss
@@ -4,22 +4,27 @@
 
 .error {
   box-sizing: border-box;
-  padding: 0px 1em;
+  padding: .7px 1em;
   color: $failure-color;
   font-size: .8em;
-  opacity: 0;
-  max-height: 0px;
-  transition: opacity     .2s,
-              padding     .1s,
-              max-height  .5s;
+  animation-duration: .2s;
+  animation-name: error-fade-in;
 }
 
 .error a {
   text-decoration: underline;
 }
 
-.error.display {
-  opacity: 1;
-  padding: .7px 1em;
-  max-height: 100px;
+@keyframes error-fade-in {
+  from {
+    opacity: 0;
+    padding: 0px 1em;
+    max-height: 0px;
+  }
+
+  to {
+    opacity: 1;
+    padding: .7px 1em;
+    max-height: 100px;
+  }
 }
