sign up will not animate, left the classes in if we decide to change it later

--- a/src/styles/theme/components/_rewards_form.scss
+++ b/src/styles/theme/components/_rewards_form.scss
@@ -51,6 +51,11 @@
   margin: 0px;
 }
 
+.rewards-form--points input,
+.rewards-form--price input {
+  width: 100%;
+}
+
 .rewards-form--points:focus + .rewards-form--points-icon,
 .rewards-form--price:focus + .rewards-form--price-icon {
   fill: $lime;
