--- a/src/styles/theme/components/_dashboard.scss
+++ b/src/styles/theme/components/_dashboard.scss
@@ -9,8 +9,8 @@
 .dashboard {
   @include display(flex);
   @include flex-direction(row);
+  @include flex(1);
   width: 100%;
-  height: 100%;
 }
 
 @media screen and (max-width: $tablet-size){
