--- a/src/styles/theme/components/_rewards_form.scss
+++ b/src/styles/theme/components/_rewards_form.scss
@@ -12,8 +12,11 @@
   @include align-items(top);
   padding: 16px;
   background-color: $white;
-  border-top: 4px solid $lime-tint-1;
   margin-bottom: 4px;
+}
+
+.rewards-form.main {
+  border-top: 4px solid $lime-tint-1;
 }
 
 .rewards-form--inputs {
