what appears to be a fully functioning and editable rewards section

--- a/src/styles/theme/components/_rewards.scss
+++ b/src/styles/theme/components/_rewards.scss
@@ -107,6 +107,10 @@
   padding: 16px;
 }
 
+.rewards-item.updating .rewards-item-actions--action {
+  visibility: hidden;
+}
+
 .rewards-item-actions--action {
   display: block;
   width: $icon-medium;
