cancel added to reward forms

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -32,7 +32,7 @@ $lime-shade-2:            #559A49;
 $lime-shade-3:            #3B7A45;
 $lime-shade-4:            #225B40;
 
-$failure-color:           #C10E27;
+$failure-color:           #F74848;
 $potential-color:         #38A6F9;
 
 // Standard sizes
