--- a/src/styles/theme/components/_stats.scss
+++ b/src/styles/theme/components/_stats.scss
@@ -12,6 +12,7 @@
   @include flex-direction(column);
   @include align-items (flex-start);
   @include flex(1);
+  padding: 8px;
 }
 
 .stats-header {
@@ -50,11 +51,21 @@
 }
 
 /* * * * * * * * * * * * * * * * * * * * 
+ *  Tablet +
+ * * * * * * * * * * * * * * * * * * * */
+
+@media screen and (min-width: $tablet-size){
+  .stats {
+    padding: 16px
+  }
+}
+
+/* * * * * * * * * * * * * * * * * * * * 
  *  Small Screen +
  * * * * * * * * * * * * * * * * * * * */
 
 @media screen and (min-width: $small-screen-size){
   .stats {
-    margin-left: 16px;
+    padding: 16px
   }
 }
