dashboard completed minus inline help

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,7 +12,7 @@ $black-30:                rgba(25, 25, 25, .3);
 
 // Gray
 $gray-tint-4:             #F5F5F7;
-$gray-tint-3:             #DCDCDF;
+$gray-tint-3:             #EBEBEF;
 $gray-tint-2:             #C4C3C6;
 $gray-tint-1:             #ABAAAE;
 $gray:                    #929295;
@@ -27,10 +27,10 @@ $lime-tint-3:             #DDF5C5;
 $lime-tint-2:             #C1EC9F;
 $lime-tint-1:             #A4E278;
 $lime:                    #87D852;
-$lime-shade-1:            #6EB94E;
-$lime-shade-2:            #559A49;
-$lime-shade-3:            #3B7A45;
-$lime-shade-4:            #225B40;
+$lime-shade-1:            #7BC950;
+$lime-shade-2:            #6EB94E;
+$lime-shade-3:            #62AA4B;
+$lime-shade-4:            #559A49;
 
 $failure-color:           #F74848;
 $potential-color:         #38A6F9;
