--- a/src/styles/theme/components/_rewards.scss
+++ b/src/styles/theme/components/_rewards.scss
@@ -11,6 +11,7 @@
   @include flex-direction(column);
   width: 100%;
   height: 100%;
+  background-color: $gray-tint-3;
 }
 
 .rewards--header {
@@ -149,7 +150,7 @@
 
   .rewards--header {
     display: block;
-    background-color: $lime;
+    background-color: $lime-shade-1;
     padding: 12px;
     text-align: center;
     color: $white;
