--- a/src/styles/theme/components/_stats.scss
+++ b/src/styles/theme/components/_stats.scss
@@ -7,16 +7,19 @@
  * * * * * * * * * * * * * * * * * * * */
 
 .stats {
+  @include flex(1);
+}
+
+.stats-header {
+  display: none;
+}
+
+.stats--container {
   display: block;
   @include display(flex);
   @include flex-direction(column);
   @include align-items (flex-start);
-  @include flex(1);
-  padding: 8px;
-}
-
-.stats-header {
-  
+  padding: 8px; 
 }
 
 .stats-card {
@@ -32,7 +35,7 @@
   @include display(flex);
   @include justify-content(center);
   @include flex-direction(column);
-  padding: 32px;
+  padding: 32px 16px;
   background-color: $white;
   @include align-self(stretch);
 }
@@ -77,7 +80,7 @@
 
 .stat--title {
   font-size: 11pt;
-  margin-bottom: 0px;
+  margin: .3em 0px 0px;
 }
 
 .stat-form {
@@ -97,7 +100,7 @@
  * * * * * * * * * * * * * * * * * * * */
 
 @media screen and (min-width: $tablet-size){
-  .stats {
+  .stats--container {
     padding: 16px
   }
 }
@@ -107,7 +110,23 @@
  * * * * * * * * * * * * * * * * * * * */
 
 @media screen and (min-width: $small-screen-size){
-  .stats {
-    padding: 16px
+  .stats-header {
+    display: block;
+    width: 100%;
+    margin: 0px;
+    padding: 12px 32px 8px;
+    background-color: $lime;
+    text-align: left;
+    color: $white;
+  }
+
+  .stats-header--icon {
+    display: inline-block;
+    fill: $white;
+    height: 1.2em;
+    width: 1.2em;
+    margin-bottom: 4px;
+    margin-right: .6em;
+    vertical-align: middle;
   }
 }
