created in line help boxes

--- a/src/styles/theme/components/_components.scss
+++ b/src/styles/theme/components/_components.scss
@@ -6,6 +6,7 @@
 @import "content";
 @import "footer";
 @import "header";
+@import "help";
 @import "rewards";
 @import "rewards_form";
 @import "dashboard";
