--- a/src/styles/theme/details/_button.scss
+++ b/src/styles/theme/details/_button.scss
@@ -34,6 +34,13 @@ input[type="submit"]:hover {
   background-color: $lime-tint-1;
 }
 
+button:disabled,
+.button:disabled,
+input[type="submit"]:disabled {
+  opacity: 0.4;
+}
+
+
 /* * * * * * * * * * * * * * * * * * * * 
  *  Tablet +
  * * * * * * * * * * * * * * * * * * * */
