--- a/src/styles/theme/details/_error.scss
+++ b/src/styles/theme/details/_error.scss
@@ -15,6 +15,10 @@
   text-decoration: underline;
 }
 
+.error-submit {
+  display: inline;
+}
+
 @keyframes error-fade-in {
   from {
     opacity: 0;
