--- a/src/styles/theme/components/_rewards_form.scss
+++ b/src/styles/theme/components/_rewards_form.scss
@@ -17,6 +17,7 @@
 
 .rewards-form.main {
   border-top: 3px solid $lime;
+  padding: 24px 16px;
 }
 
 .rewards-form--inputs {
@@ -59,17 +60,21 @@
 }
 
 .rewards-form-actions {
-  margin-left: 16px;
-  margin-top: 12px;
+  @include display (flex);
+  @include flex-direction (column);
+  @include justify-content (space-around);
+  padding-left: 16px;
+
 }
 
 .rewards-form-actions--action {
   display: block;
   width: $icon-medium;
   height: $icon-medium;
-  fill: $gray-shade-2;
-  transition: fill        .2s;
   margin-bottom: 12px;
+  fill: $gray-shade-2;
+  cursor: pointer;
+  transition: fill        .2s;
 }
 
 .rewards-form-actions--action:last-child {
