rewards no longer submits with invalid fields

--- a/src/styles/theme/_elements.scss
+++ b/src/styles/theme/_elements.scss
@@ -64,6 +64,26 @@ input[type="checkbox"] {
   background-color: $gray-tint-2;
 }
 
+button,
+input[type="submit"] {
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 0px;
+  text-align: center;
+  border: none;
+  background-color: transparent;
+  outline: none;
+  font-size: inherit;
+  font-family: inherit;
+  text-transform: inherit;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+button.disabled {
+  opacity: .4;
+}
+
 #{$text-input} {
   box-sizing: border-box;
   padding: .8em 1em;
