stats no longer updates when canceled, and will not submit invalid values

--- a/src/styles/theme/components/_stats.scss
+++ b/src/styles/theme/components/_stats.scss
@@ -57,6 +57,11 @@
   fill: $potential-color;
 }
 
+.stats-card--action:disabled {
+  fill: $gray-tint-3;
+  cursor: default;
+}
+
 .stat {
   padding: 32px;
   text-align: center;
