--- a/src/styles/theme/components/_help.scss
+++ b/src/styles/theme/components/_help.scss
@@ -20,6 +20,18 @@
   }
 }
 
+.help a {
+  color: $lime;
+}
+
+.help img {
+  box-shadow: 0px 1px 4px 0px $black-30;
+  display: block;
+  border-width: 0px;
+  margin: 8px 2% 12px;
+  max-width: 96%;
+}
+
 .help--header {
   box-sizing: border-box;
   width: 100%;
